[tool.poetry]
name = "sykletiljobben"
version = "0.1.0"
description = ""
authors = ["Olav Markussen <olav.markussen@safebase.no>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.3"
arrow = "^1.2.2"
ipython = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
